# dio_projeto_anti_fraude

./: pyproject.toml
dio_projeto_antifraude/: Config.py  app.py
dio_projeto_antifraude/services/: blob_services.py  credit_card_services.py
